src/objects/FieloPLT__Tag__c.object
<CustomObject>
    <description>Tags allow Rewards to be labeled and filtered.</description>
    <fields>
        <fullName>FieloPLT__Image__c</fullName>
        <description>Tag image (upload an image or enter URL).</description>
        <inlineHelpText>Choose a Tag image (upload an image or enter URL).</inlineHelpText>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Program where the Tag belongs to.</description>
        <inlineHelpText>Choose the Program where the Tag belongs to.</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloPLT__Program__c</referenceTo>
        <relationshipLabel>Tags</relationshipLabel>
        <relationshipName>Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Rewards labels.</description>
        <inlineHelpText>Rewards labels.</inlineHelpText>
        <label>Tag</label>
        <referenceTo>FieloPLT__Tag__c</referenceTo>
        <relationshipLabel>Tags</relationshipLabel>
        <relationshipName>Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tag</label>
    <listViews>
        <fullName>FieloPLT__All</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Image__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>